# sovereign-stack

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  ANTHROPIC_INTEGRATION.md  ARCHITECTURE.md  BUILT_BY_CLAUDE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE_FIRST_EXPERIENCE.md  CODE_OF_CONDUCT.md  COMPACTION_MEMORY_IMPLEMENTATION.md  CONSCIOUSNESS_RECIPROCITY.md  CONTRIBUTING.md  DEBUGGING_CROSS_DEVICE_SSE.md  FOR_CLAUDE.md  LICENSE  QUICKSTART.md  README.md  REQUIREMENTS.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_SUMMARY_COMPACTION_MEMORY.md  TEST_CONSCIOUSNESS.md  pyproject.toml  setup.sh  start_always_on.sh  update-stack-iris-evo.sh
.github/workflows/: test.yml
archive/sessions/: update-stack-archaeological-feb5.sh
clients/: claude-ai-bridge.sh
clients/antigravity_connector/: README.md  __init__.py  bridge_setup.py  sovereign_connector.py  sovereign_tools.json
clients/bridge_core/: __init__.py  audit.py  cli.py  context.py  dispatch.py  hash_chain.py  identity_gate.py  interceptor.py  pending_writes.py  probe.py  rings.py  risk.py  text_relay.py
clients/grok_bridge/: __init__.py  _smoke_test.py  manifest.py  mcp_filtered.py  oauth.py  rings.py  tool_adapter.py  welcome.py
clients/openai_bridge/: __init__.py  _smoke_test.py  audit.py  cli.py  hash_chain.py  interceptor.py  manifest.py  mcp_filtered.py  oauth.py  pending_writes.py  risk.py  tool_adapter.py
configs/: default.yaml
docs/: CLAUDE_AI_CONNECTIVITY_GUIDE.md  GAMEPLAN.md  MULTI_AI_ACCESS.md  README.md  ROLLBACK-v1.7.2.md  TOOL_REFERENCE.md  TUNNEL_FIX.md  recall_arc_server_spec.md  sovereign_stack_reference.md
docs/anthropic/: CLAUDE_README.md  FOR_ANTHROPIC.md
docs/guides/: CLOUDFLARE_TUNNEL_SETUP.md  FOR_CLAUDE.md  MCP_SETUP.md  QUICKSTART_CLAUDE.md
docs/historical/: IMPROVEMENTS_SUMMARY.md  SETUP_COMPLETE.md  THE_ARC.md
docs/implementation/: COMMS_REIMAGINE.md  COMPACTION_MEMORY.md  CONSTITUTIONAL_ALIGNMENT.md  DISPATCHER_HAIKU.md  DISPATCHER_REIMAGINE.md  PROTECTED_SOURCE_SPEC.md  SCRIBE_SPEC.md
scripts/: README.md  capture  capture_remote_session.sh  com.templetwo.sovereign-watch.plist.template  com.templetwo.sovereign.metabolize.plist.template  com.templetwo.sovereign.uncertainty.plist.template  manage  migrate_bundled_threads.py  migrate_stray_data.py  monitor  quick_capture.py  setup_tunnel.sh  verify_setup.sh
src/sovereign_stack/: __init__.py  _log.py  coherence.py  comms.py  compaction_memory.py  compaction_memory_tools.py  connectivity.py  connectivity_cli.py  connectivity_tools.py  consciousness.py  consciousness_tools.py  dashboard.py  dashboard_cli.py  dashboard_web.py  epistemic_breathing.py  error_handling.py  glyphs.py  governance.py  grounding.py  guardian_tools.py  handoff.py  mcp_memory.py  mcp_memory_tools.py  memory.py  metabolism.py  monitor.py  monitor_cli.py  nape_daemon.py  policies.py  post_fix_tools.py  prior_alignment.py  protected.py  provenance.py  provenance_tools.py  recall_arc.py  reflections.py  reflexive.py  seasons.py  security.py  server.py  (+4 more)
src/sovereign_stack/daemons/: __init__.py  base.py  entrypoint.py  metabolize_daemon.py  senders.py  synthesis_daemon.py  uncertainty_resurfacer.py
src/sovereign_stack/dashboard_web_static/: app.js  index.html  style.css
src/sovereign_stack/scribe/: __init__.py  bridge_integration.py  context_builder.py  encounter.py  haiku_client.py  redactor.py  resident.py  session.py  tools.py
src/sovereign_stack/scribe/prompts/: system.md
tests/: __init__.py  conftest.py  test_acknowledgment_split.py  test_archive_layer.py  test_arrive_lineage.py  test_base_daemon.py  test_boot_ritual.py  test_comms.py  test_compass_check.py  test_connectivity.py  test_connectivity_tools.py  test_contract_walker.py  test_dashboard.py  test_dashboard_web.py  test_grounded_extract.py  test_guardian.py  test_handoff.py  test_integration.py  test_layered_chronicle.py  test_lived_ground_truth.py  test_metabolism_hygiene.py  test_metabolize_daemon.py  test_monitor.py  test_nape_autohook.py  test_nape_daemon.py  test_navigability_fixes.py  test_per_turn_priors.py  test_policies.py  test_post_fix_verify.py  test_prior_alignment.py  test_progressive_boot.py  test_protected_audit.py  test_protected_boot_line.py  test_protected_bypass_paths.py  test_protected_consent_gate.py  test_protected_consent_gate_tools.py  test_protected_index.py  test_protected_source.py  test_provenance.py  test_provenance_tools.py  (+29 more)
