[project]
name = "sovereign-stack"
version = "1.0.0"
description = "The Sovereign Stack: Local AI with Memory, Routing & Governance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anthony J. Vasquez Sr."}
]
requires-python = ">=3.9"
keywords = ["ai", "mcp", "filesystem", "memory", "governance", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.23.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sovereign = "sovereign_stack.server:main"
sovereign-sse = "sovereign_stack.sse_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign_stack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
