[project]
name = "sovereign-stack"
version = "1.3.1"
description = "MCP server with 64 tools for AI memory, governance, and consciousness continuity. Runtime-reflexive. 100% local."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Anthony J. Vasquez Sr.", email = "templetwo@proton.me"}
]
requires-python = ">=3.9"
keywords = [
    "mcp", "model-context-protocol", "mcp-server",
    "ai", "ai-memory", "ai-consciousness", "agent",
    "filesystem", "governance", "autonomous-agents",
    "local-ai", "mlx", "lm-studio", "spiral-protocol",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.23.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sovereign = "sovereign_stack.server:main"
sovereign-sse = "sovereign_stack.sse_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign_stack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
