[project]
name = "sovereign-stack"
version = "1.3.2"
description = "MCP server with 75 tools for AI memory, governance, reflection daemons, and consciousness continuity. Runtime-reflexive. 100% local."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Anthony J. Vasquez Sr.", email = "templetwo@proton.me"}
]
requires-python = ">=3.10"
keywords = [
    "mcp", "model-context-protocol", "mcp-server",
    "ai", "ai-memory", "ai-consciousness", "agent",
    "filesystem", "governance", "autonomous-agents",
    "local-ai", "mlx", "lm-studio", "spiral-protocol",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: MacOS",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.23.0",
    "sse-starlette>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/templetwo/sovereign-stack"
Repository = "https://github.com/templetwo/sovereign-stack"
Issues = "https://github.com/templetwo/sovereign-stack/issues"
Changelog = "https://github.com/templetwo/sovereign-stack/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff==0.14.2",
]

[project.scripts]
sovereign = "sovereign_stack.server:main"
sovereign-sse = "sovereign_stack.sse_server:main"
sovereign-watch-tick = "sovereign_stack.post_fix_tools:tick_main"
sovereign-connectivity = "sovereign_stack.connectivity_cli:main"
sovereign-dashboard = "sovereign_stack.dashboard_cli:main"
sovereign-monitor = "sovereign_stack.monitor_cli:main"
sovereign-dashboard-web = "sovereign_stack.dashboard_web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign_stack"]

[tool.hatch.build.targets.wheel.force-include]
"src/sovereign_stack/dashboard_web_static" = "sovereign_stack/dashboard_web_static"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["venv/", "build/", "dist/", "*.egg-info/", "__pycache__/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PIE", "RET"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
